# pectin

./: .gitignore  CMakeLists.txt  README.md  boids.c  boids.h  colors.cpp  colors.h  easing.h  example_box.c  example_box.h  example_common.c  example_common.h  example_diffusion.c  example_diffusion.h  example_nine_slice.c  example_nine_slice.h  example_pbox.c  example_pbox.h  example_pingpong.c  example_pingpong.h  example_port_audio.c  example_port_audio.h  example_throw.c  example_throw.h  example_trifle.c  example_trifle.h  example_wiggle.c  example_wiggle.h  game_util.c  game_util.h  grid.c  grid.h  level.c  level.h  level_editor.c  level_editor.h  main.c  main.cpp  math_3d.h  misc_util.c  (+14 more)
config/: box_render_defs.cfg  cutout.qb  cutout.vox  cutout2.qb  cutout2.vox  cutout3.qb  cutout3.vox  level_editor_defs.cfg  nine_render_defs.cfg  nine_slice.tmx  nine_test.json  nine_test.tmx  pbox_render_defs.cfg  port_render_defs.cfg  proto.json  render_defs.cfg  throw.json  throw_render_defs.cfg  wiggle_render_defs.cfg
images/: highlight.ase  nine_slice.ase  nine_slice2.ase  test_box.ase  test_box2.ase  test_box3.ase  test_box4.ase  test_box5.ase  throw_sprites.ase  wiggle.ase
shaders/: box_ao_frag.glsl  box_ao_geom.glsl  box_frag.glsl  box_geom.glsl  diff_calc_frag.glsl  diff_screen_frag.glsl  hilite_frag.glsl  hilite_geom.glsl  hilite_vert.glsl  light_box_frag.glsl  light_box_geom.glsl  light_box_shadow_frag.glsl  light_box_vert.glsl  line_frag.glsl  line_geom.glsl  line_vert.glsl  nine_slice_geom.glsl  nothing_frag.glsl  pbox_frag.glsl  pbox_geom.glsl  pbox_vert.glsl  pp_ds_frag.glsl  pp_lp_frag.glsl  pp_pt_frag.glsl  pp_vert.glsl  shadow_map_frag.glsl  shadow_map_geom.glsl  shadow_map_sprite_frag.glsl  shadow_map_sprite_geom.glsl  shadow_map_vert.glsl  sprite_frag.glsl  sprite_frag_layer.glsl  sprite_frag_shadow.glsl  sprite_frag_simple.glsl  sprite_geom.glsl  sprite_lit_frag.glsl  sprite_lit_geom.glsl  sprite_lit_vert.glsl  sprite_vert.glsl  vbox_geom.glsl  (+4 more)
